# bootstrap_imgui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: bootstrap_imgui.cpp  main.cpp
src/example/: main.cpp
src/example/shaders/: square.frag  square.vert  triangle.frag  triangle.vert
src/helpers/: HelpersImgui.cpp  HelpersImgui.h  HelpersOpenGl.cpp  HelpersOpenGl.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  TDequeConcurrent.h
